{{$NEXT}}

0.020     2011-09-01 15:30:23 America/Los_Angeles

    * Bug Fixes:

    The "list" command had become broken because i forgot
    to import List::MoreUtils.  I'm surprised it compiled at all.

0.019     2011-08-30 01:16:12 America/Los_Angeles

    * Interface changes:

    The --host option is now called --server or just -s.

    If you forget to put http:// in front of your server
    name, pinto-remote will kindly do it for you.

    * Other Changes:

    Now requires Pinto-Common 0.019, which has the
    Pinto::Constants library.

0.018     2011-08-24 04:05:49 America/Los_Angeles

    No interface changes.

    Just cleaned up some extra newlines in the output.

0.017     2011-08-24 00:19:31 America/Los_Angeles

    pinto-remote[1] is now zero-conf.  However, you must
    always specify the --host on the command line.

    Added support the different types of "list" actions.

    Only compatible with pinto-server 0.017 or higher.

0.001     2011-08-17 17:15:41 America/Los_Angeles

    Initial release.