@@ -5,7 +5,7 @@ license     = Perl_5
 copyright_holder = Imaginative Software Systems
 copyright_year   = 2011
 
-version = 0.020
+version = 0.021
 
 [GatherDir]         ; everything under top dir
 [PruneCruft]        ; default stuff to skip
@@ -77,6 +77,8 @@ meta_noindex = 1        ; respect prior no_index directives
  
 ; releaser
 [UploadToCPAN]      ; uploads to CPAN
+[Pinto::Add]        ; Send to Pinto
+repos = http://localhost
  
 ; after release
 [Git::Commit / Commit_Dirty_Files] ; commit Changes (as released)
