@@ -1,0 +1,31 @@
+package Pinto::Remote::Action::Nop;
+
+# ABSTRACT: Run a no-op on a remote repository
+
+use Moose;
+
+use namespace::autoclean;
+
+#------------------------------------------------------------------------------
+
+# VERSION
+
+#------------------------------------------------------------------------------
+
+extends qw(Pinto::Remote::Action);
+
+#------------------------------------------------------------------------------
+
+override execute => sub {
+    my ($self) = @_;
+    return $self->post('nop');
+};
+
+#------------------------------------------------------------------------------
+
+__PACKAGE__->meta->make_immutable();
+
+#------------------------------------------------------------------------------
+1;
+
+__END__
